# keios-protocol

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
python/: .gitignore  README.md  poetry_scripts.py  pyproject.toml  requirements-dev.txt  setup.py
python-keios-protocol/: README.md  pyproject.toml
python-keios-protocol/python_keios_protocol/: FlatbufferObject.py
python-keios-protocol/python_keios_protocol/classification/class2/: protocol.py
python-keios-protocol/python_keios_protocol/pocketsphinx/: Protocol.py  protocol.py
python-keios-protocol/python_keios_protocol/pocketsphinx/fbs/: PocketsphinxRequest.py  PocketsphinxResponse.py
python-keios-protocol/python_keios_protocol/spacy/: protocol.py
python-keios-protocol/python_keios_protocol/spacy/fbs/: NERSpacyResponse.py  SpacyRequest.py  SpacyResponse.py
python-keios-protocol/tests/pocketsphinx/: conftest.py  test_request.py  test_response.py
python/keios-protocol-classification-class2/: pyproject.toml
python/keios-protocol-classification-class2/classification-class2/: protocol.py
python/keios-protocol-classification-class2/classification-class2/flatbuffers/: ClassificationClass2Request.py  ClassificationClass2Response.py  Vector.py
python/keios-protocol-classification-class2/keios_protocol_classification_class2/: __init__.py
python/keios-protocol-classification-class2/keios_protocol_classification_class2/flatbuffers/: Probability.py
python/keios-protocol-classification-class2/tests/: test_request.py  test_response.py
python/keios-protocol-common/: pyproject.toml
python/keios-protocol-common/keios_protocol_common/: __init__.py
python/keios-protocol-common/test/: test_keios_protocol_common.py
python/keios-protocol-gensim/: pyproject.toml
python/keios-protocol-gensim/keios_protocol_gensim/: __init__.py  fasttext_embedding.py  fasttext_most_similar.py  fasttext_similarity.py  typed_message.py
python/keios-protocol-gensim/keios_protocol_gensim/fbs/: EmbeddingElement.py  EmbeddingRequest.py  EmbeddingResponse.py  GensimFastTextEmbeddingRequest.py  GensimFastTextEmbeddingResponse.py  GensimFastTextSimilarityResponse.py  GensimMessage.py  GensimMessageType.py  MostSimilarResponse.py  MostSimilarity.py  SimilarityRequest.py  SimilarityResponse.py
python/keios-protocol-gensim/keios_protocol_gensim/flatbuffers/: GensimFastTextEmbeddingRequest.py  GensimFastTextEmbeddingResponse.py  GensimFastTextMostSimilarRequest.py  GensimFastTextMostSimilarResponse.py  GensimFastTextSimilarityRequest.py  GensimFastTextSimilarityResponse.py  MostSimilarRequest.py  Similarity.py  VectorElement.py
python/keios-protocol-gensim/tests/: test_fasttext_embedding.py  test_fasttext_most_similar.py  test_fasttext_similarity.py  test_message.py
python/keios-protocol-pocketsphinx/: conftest.py  pyproject.toml
python/keios-protocol-pocketsphinx/keios_protocol_pocketsphinx/: __init__.py
python/keios-protocol-pocketsphinx/keios_protocol_pocketsphinx/flatbuffers/: PocketSphinxMessage.py  PocketSphinxMessageType.py  PocketSphinxRequest.py  PocketSphinxResponse.py
python/keios-protocol-pocketsphinx/tests/: conftest.py  test_message.py  test_request.py  test_response.py
python/keios-protocol-spacy/: conftest.py  pyproject.toml
python/keios-protocol-spacy/keios_protocol_spacy/: __init__.py
python/keios-protocol-spacy/tests/: test_spacy.py
python/keios-protocol-tesseract/: pyproject.toml
python/keios-protocol-tesseract/keios_protocol_tesseract/: __init__.py
python/keios-protocol-tesseract/tests/: test_keios_protocol_tesseract.py
python/python_keios_protocol/pocketsphinx/: protocol.py
python/python_keios_protocol/spacy/: protocol.py
python/tests/: test_python_keios_protocol.py
python/tests/pocketsphinx/: conftest.py
python/tests/spacy/: test_spacy.py
(+433 files in other folders)
