[tool.poetry]
name = "python-keios-protocol"
version = "0.1.0"
description = ""
authors = ["Leftshift One <contact@leftshift.one>"]

[tool.poetry.dependencies]
python = "^3.7"
flatbuffers = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pocketsphinx-fork = "^1.0"
numpy = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
