[tool.poetry]
name = "keios-protocol"
version = "0.14.0"
description = ""
authors = ["Leftshift One <contact@leftshift.one>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
toml = "^0.10.0"

[tool.poetry.scripts]
install = "poetry_scripts:install"
test = "poetry_scripts:test"
test-ci = "poetry_scripts:test_ci"
build = "poetry_scripts:build"
publish = "poetry_scripts:publish"
publish-ci = "poetry_scripts:publish_ci"
trigger-release-major = "poetry_scripts:trigger_release_major" # e.g. poetry run trigger-release-major keios-protocol-spacy
trigger-release-minor = "poetry_scripts:trigger_release_minor" # e.g. poetry run trigger-release-minor keios-protocol-spacy
trigger-release-patch = "poetry_scripts:trigger_release_patch" # e.g. poetry run trigger-release-patch keios-protocol-spacy
cleanup-release = "poetry_scripts:cleanup_release" # e.g. poetry run cleanup-release release-minor-keios-protocol-spacy
release = "poetry_scripts:release" # e.g. poetry run release release-minor-keios-protocol-spacy

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
