[tool.poetry]
name = "keios-protocol-gensim"
version = "1.0.0"
description = ""
authors = ["Leftshift One <contact@leftshift.one>"]

[tool.poetry.dependencies]
python = "^3.7"
flatbuffers = "^1.11"
keios-protocol-common = "^0.1.1"
#keios-protocol-common = { version = "^0.1.1", path = "../keios-protocol-common" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
