[tool.poetry]
name = "keios-protocol-spacy"
version = "0.1.0"
description = ""
authors = ["Leftshift One <contact@leftshift.one>"]

[tool.poetry.dependencies]
python = "^3.7"
flatbuffers = "^1.11"
keios_protocol_common = { path = "../keios-protocol-common" }
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
